Ch07/my-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api
  labels:
    app: my-api
spec:
  type: ClusterIP
  selector:
    app: my-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
